# Talent-Rank-AI

./: .gitignore  LICENSE  LOVABLE_CONTEXT.md  README.md  payload.json  ~$Idea Submission Template _ Redrob.pptx
talentrank-ai/: pyproject.toml
talentrank-ai/artifacts/embeddings/: candidate_embeddings.npy  jd_embedding.npy
talentrank-ai/artifacts/features/: feature_store.parquet
talentrank-ai/artifacts/indices/: bm25_index.pkl  candidate.faiss
talentrank-ai/data/processed/: data_quality_report.json
talentrank-ai/notebooks/: 01_dataset_overview.ipynb  02_behavioral_analysis.ipynb  03_skill_and_experience_analysis.ipynb  04_company_and_title_analysis.ipynb  05_honeypot_detection.ipynb  06_feature_engineering_analysis.ipynb
talentrank-ai/scripts/: generate_notebooks.py  run_data_pipeline.py  run_offline_pipeline.py
talentrank-ai/src/: __init__.py
talentrank-ai/src/api/: config_manager.py  dependencies.py  main.py  repository.py
talentrank-ai/src/behavior/: __init__.py  analyzer.py
talentrank-ai/src/config/: __init__.py  settings.py
talentrank-ai/src/data/: __init__.py  cleaner.py  models.py  parser.py  validator.py
talentrank-ai/src/embeddings/: __init__.py  generator.py
talentrank-ai/src/evaluation/: __init__.py  framework.py  metrics.py
talentrank-ai/src/explanations/: __init__.py  evidence.py
talentrank-ai/src/features/: __init__.py  extractors.py  pipeline.py  store.py
talentrank-ai/src/ranking/: __init__.py  ranker.py
talentrank-ai/src/retrieval/: __init__.py  dense.py  hybrid.py  lexical.py
talentrank-ai/tests/: __init__.py
(+67 files in other folders)
